@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <OnOTAInfo>
   <RomName>NcX S21FE</RomName>
-  <VersionName>5.1 - May Update</VersionName>
-  <BuildNumber type="integer">20230501</BuildNumber>
-  <DownloadURL>https://github.com/ShaDisNX255/NcX_OnUpdate/releases/download/a52q-20230501/OTA-20230501.zip</DownloadURL>
+  <VersionName>20230502 Update</VersionName>
+  <BuildNumber type="integer">20230502</BuildNumber>
+  <DownloadURL>https://github.com/ShaDisNX255/NcX_OnUpdate/releases/download/a52q-20230502/OTA-20230502-a52q.zip</DownloadURL>
   <AndroidVer>13</AndroidVer>
   <OneUIVer>5.1</OneUIVer>
-  <CheckMD5>227144902335a7735977fffca008eb6c</CheckMD5>
-  <FileSize type="long">49702611</FileSize>
+  <CheckMD5>78c536ad2c482c7db43bca247e696f2e</CheckMD5>
+  <FileSize type="long">69821216</FileSize>
   <WebsiteURL>https://forum.xda-developers.com/apps/magisk/dev-magisk-canary-channel-bleeding-edge-t3839337</WebsiteURL>
   <ChangelogHeader>https://i.ibb.co/92RxppQ/changelogheader1100.png</ChangelogHeader>
   <ChangelogURL>https://raw.githubusercontent.com/ShaDisNX255/NcX_OnUpdate/main/a52q/changelog.txt</ChangelogURL>
