@@ -1,5 +1,8 @@
 Welcome to the NcX changelog
 
+Changelog from 20230501 > 20230502:
+• Fix Reboot to Download Mode - SystemUI
+
 Changelog from 20230401 > 20230501:
 • Fix Super Steady - Camera
 
